# py-test-vpn-service

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
vpn_service/: main.py  models.py  utils.py
vpn_service/routers/: auth.py  dashboard.py  proxy.py
vpn_service/templates/: base.html  index.html  signin.html  signup.html
